--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "gh-pages": "^4.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "num-to-korean": "^0.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
